Update model and service architecture.